roll a windows VM don't use this compose

--- a/enshrouded/docker-compose.yaml
+++ b/enshrouded/docker-compose.yaml
@@ -27,3 +27,5 @@ services:
       - "15637:15637/tcp"
     volumes:
       - ./data:/home/steam/enshrouded # saves + config live here
+
+DONT USE THIS - ROLL A WINDOWS VM
